// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mock twice mock a module 1`] = `
<GelXIframe
  displayLoader={<mocked-version-one />}
  postMessage={[Function]}
/>
`;

exports[`mock twice mock same module again 1`] = `
<GelXIframe
  displayLoader={<mocked-version-two />}
  postMessage={[Function]}
/>
`;
